--- a/contactUs.html
+++ b/contactUs.html
@@ -3,6 +3,6 @@
       <title>Adding map feature</title>
       </head>
       <body>
-              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14004.405416590693!2d77.2060235!3d28.656683750000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1665398082981!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14004.405416590693!2d77.2060235!3d28.656683750000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1665398082981!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </body>
 </html>              
